mi segundo commit

--- a/intex.html
+++ b/intex.html
@@ -4,9 +4,13 @@
     </head>
     <body>
         <h1>Frank De La Rosa</h1>
+        <img src="profesor.PNG"/>
         <h2>Tu profe favorito</h2>
         <h3>31 años</h3>
         <h4>960579083</h4>
+        <a href="https://www.youtube.com/watch?v=RvBBiTVp9Sg"> ejemplo</a>
+        <h5>music</h5>
+        <a href="https://www.youtube.com/watch?v=0GCjV2Wij8o"> musica 1</a>
         <p> Israel</p>
     </body>
 </html>
