--- a/intex.html
+++ b/intex.html
@@ -1,16 +1,20 @@
-<html>
+<html>    
     <head>
         <title> Mi primera web</title>
     </head>
-    <body>
+    
+    <body style="background-image: url('descarga.gif');background-size: cover;">
         <h1>Frank De La Rosa</h1>
         <img src="profesor.PNG"/>
         <h2>Tu profe favorito</h2>
         <h3>31 años</h3>
         <h4>960579083</h4>
+        <h5>comediante favorito</h5>
         <a href="https://www.youtube.com/watch?v=RvBBiTVp9Sg"> ejemplo</a>
-        <h5>music</h5>
+        <h6>music</h6>
         <a href="https://www.youtube.com/watch?v=0GCjV2Wij8o"> musica 1</a>
-        <p> Israel</p>
+        <h7>Pais de residencia</h7>
+    <p> Israel</p>
     </body>
+    </table>
 </html>
